# hypermodern-python-cli

./: .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml
src/hypermodern_python_cli/: console.py  wikipedia.py
tests/: test_console.py  test_wikipedia.py
