[tool.poetry]
name = "hypermodern-python-cli"
version = "0.1.0"
description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cw-andrews/hypermodern-python-cli"
repository = "https://github.com/cw-andrews/hypermodern-python-cli"
authors = ["cw-andrews <cwandrews@protonmail.com>"]
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
